# golem-core-rs

./: Cargo.toml  README.md
net/: Cargo.toml
net/src/: bin.rs  error.rs  event.rs  lib.rs  logic.rs
net/src/codec/: error.rs  message.rs  mod.rs
net/src/network/: mod.rs  session.rs
net/src/transport/: error.rs  message.rs  mod.rs  session.rs  tcp.rs  udp.rs
pyext-golem-core/: .gitignore  Cargo.toml  requirements.txt  setup.py
pyext-golem-core/examples/: simple_server.py
pyext-golem-core/golem_core/: __init__.py  enums.py  events.py  structs.py
pyext-golem-core/src/: core.rs  error.rs  event.rs  lib.rs
pyext-golem-core/src/logging/: mod.rs
pyext-golem-core/src/network/: mod.rs
pyext-golem-core/src/python/: mod.rs
