[package]
name = "net"
version = "0.1.0"
authors = ["Marek Franciszkiewicz <marek@golem.network>"]

[lib]
name = "net"
path = "src/lib.rs"

[[bin]]
name = "net"
path = "src/bin.rs"

[dependencies]
actix = "0.5"
bincode = "0.9"
bytes = "0.4"
byteorder = "1.1"
futures = "0.1"
rand = "0.5"
serde = "1.0"
serde_derive = "1.0"
tokio = "0.1"
tokio-codec = "0.1"
tokio-io = "0.1"
tokio-tcp = "0.1"
tokio-udp = "0.1"